feat: adjust restaurant overview layout to use full width for 4 boxes

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -32,6 +32,7 @@
     "employees": "Employees",
     "restaurants": "Restaurants",
     "menus": "Menus",
+    "platos": "Dishes",
     "products": "Products",
     "tables": "Tables",
     "statistics": "Statistics",
@@ -231,6 +232,15 @@
     "deactivateMenu": "Deactivate menu",
     "activateMenu": "Activate menu",
     "deleteMenu": "Delete menu",
+    "addPlato": "Add Dish",
+    "noPlatos": "No dishes in this restaurant",
+    "addPlatosToOperate": "Add dishes to start operating",
+    "plato": "Dish",
+    "ingredients": "Ingredients",
+    "editPlato": "Edit dish",
+    "deactivatePlato": "Deactivate dish",
+    "activatePlato": "Activate dish",
+    "deletePlato": "Delete dish",
     "addProduct": "Add Product",
     "noProducts": "No products in this restaurant",
     "addProductsToOperate": "Add products to start operating",
