--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -32,6 +32,7 @@
     "employees": "Empleados",
     "restaurants": "Restaurantes",
     "menus": "Menús",
+    "platos": "Platos",
     "products": "Productos",
     "tables": "Mesas",
     "statistics": "Estadísticas",
@@ -231,6 +232,15 @@
     "deactivateMenu": "Desactivar menú",
     "activateMenu": "Activar menú",
     "deleteMenu": "Eliminar menú",
+    "addPlato": "Agregar Plato",
+    "noPlatos": "No hay platos en este restaurante",
+    "addPlatosToOperate": "Agrega platos para comenzar a operar",
+    "plato": "Plato",
+    "ingredients": "Ingredientes",
+    "editPlato": "Editar plato",
+    "deactivatePlato": "Desactivar plato",
+    "activatePlato": "Activar plato",
+    "deletePlato": "Eliminar plato",
     "addProduct": "Agregar Producto",
     "noProducts": "No hay productos en este restaurante",
     "addProductsToOperate": "Agrega productos para comenzar a operar",
