feat: improve dashboard layout and user management interface
- Fix admin box positioning and layout in dashboard header
- Remove 'My Restaurants' button for admin users
- Center 'User Management' title above user table
- Remove pagination info text 'Showing X-Y of Z users'
- Remove shadow from 'User Management' title
- Increase admin box width for better visual balance
- Reorder header elements: admin box first, language selector second
- Optimize responsive design and spacing

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -39,6 +39,7 @@
     "schedules": "Schedules",
     "shifts": "Shifts",
     "details": "Details",
+    "viewDetails": "View Details",
     "overview": "Overview",
     "settings": "Settings",
     "profile": "Profile",
