--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -39,6 +39,7 @@
     "schedules": "Horarios",
     "shifts": "Turnos",
     "details": "Detalles",
+    "viewDetails": "Ver Detalles",
     "overview": "Resumen",
     "settings": "Configuración",
     "profile": "Perfil",
