feat: implementar funcionalidad de edición de ingredientes
- Agregar props initialData e isEditing al AddProductModal
- Implementar pre-llenado del formulario para edición
- Actualizar ProductsTab para manejar estado de edición
- Modificar RestaurantManagement para actualizar ingredientes
- Cambiar títulos y botones dinámicamente según modo (crear/editar)

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -469,20 +469,37 @@
     }
   },
   "products": {
-    "title": "Products",
-    "addProduct": "Add Product",
-    "editProduct": "Edit Product",
-    "deleteProduct": "Delete Product",
-    "productName": "Product Name",
-    "productDescription": "Product Description",
-    "productPrice": "Product Price",
+    "title": "Ingredients",
+    "addProduct": "Add Ingredient",
+    "editProduct": "Edit Ingredient",
+    "deleteProduct": "Delete Ingredient",
+    "productName": "Ingredient Name",
+    "productDescription": "Ingredient Description",
+    "productPrice": "Ingredient Price",
     "stock": "Available Stock",
+    "unit": "Unit of Measure",
+    "cost": "Cost",
+    "minStock": "Minimum Stock",
+    "supplier": "Supplier",
+    "expirationDate": "Expiration Date",
+    "allergens": "Allergens",
     "categories": {
-      "ENTRADA": "Appetizer",
-      "PLATO_PRINCIPAL": "Main Course",
-      "POSTRE": "Dessert",
-      "BEBIDA": "Beverage",
-      "ACOMPAÑAMIENTO": "Side Dish"
+      "GRANOS": "Grains",
+      "PASTAS": "Pasta",
+      "VERDURAS": "Vegetables",
+      "CARNES": "Meats",
+      "LÁCTEOS": "Dairy",
+      "ACEITES": "Oils",
+      "HARINAS": "Flours",
+      "HUEVOS": "Eggs",
+      "ESPECIAS": "Spices",
+      "CONDIMENTOS": "Condiments",
+      "BEBIDAS": "Beverages",
+      "FRUTAS": "Fruits",
+      "PESCADOS": "Fish",
+      "MARISCOS": "Seafood",
+      "LEGUMBRES": "Legumes",
+      "FRUTOS_SECOS": "Nuts"
     }
   },
   "tables": {
