--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -469,20 +469,37 @@
     }
   },
   "products": {
-    "title": "Productos",
-    "addProduct": "Agregar Producto",
-    "editProduct": "Editar Producto",
-    "deleteProduct": "Eliminar Producto",
-    "productName": "Nombre del Producto",
-    "productDescription": "Descripción del Producto",
-    "productPrice": "Precio del Producto",
+    "title": "Ingredientes",
+    "addProduct": "Agregar Ingrediente",
+    "editProduct": "Editar Ingrediente",
+    "deleteProduct": "Eliminar Ingrediente",
+    "productName": "Nombre del Ingrediente",
+    "productDescription": "Descripción del Ingrediente",
+    "productPrice": "Precio del Ingrediente",
     "stock": "Stock Disponible",
+    "unit": "Unidad de Medida",
+    "cost": "Costo",
+    "minStock": "Stock Mínimo",
+    "supplier": "Proveedor",
+    "expirationDate": "Fecha de Vencimiento",
+    "allergens": "Alérgenos",
     "categories": {
-      "ENTRADA": "Entrada",
-      "PLATO_PRINCIPAL": "Plato Principal",
-      "POSTRE": "Postre",
-      "BEBIDA": "Bebida",
-      "ACOMPAÑAMIENTO": "Acompañamiento"
+      "GRANOS": "Granos",
+      "PASTAS": "Pastas",
+      "VERDURAS": "Verduras",
+      "CARNES": "Carnes",
+      "LÁCTEOS": "Lácteos",
+      "ACEITES": "Aceites",
+      "HARINAS": "Harinas",
+      "HUEVOS": "Huevos",
+      "ESPECIAS": "Especias",
+      "CONDIMENTOS": "Condimentos",
+      "BEBIDAS": "Bebidas",
+      "FRUTAS": "Frutas",
+      "PESCADOS": "Pescados",
+      "MARISCOS": "Mariscos",
+      "LEGUMBRES": "Legumbres",
+      "FRUTOS_SECOS": "Frutos Secos"
     }
   },
   "tables": {
