feat: implementar funcionalidad completa de platos
- Crear AddPlatoModal con formulario dinámico para ingredientes
- Agregar funcionalidad de llenar ejemplo con botón reutilizable
- Usar componentes Button reutilizables en toda la aplicación
- Implementar mock data para platos en platosData.ts
- Actualizar traducciones para platos en es.json y en.json
- Integrar modal de platos en RestaurantManagement.tsx
- Permitir agregar/editar platos con ingredientes de la base de datos

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -234,6 +234,8 @@
     "activateMenu": "Activate menu",
     "deleteMenu": "Delete menu",
     "addPlato": "Add Dish",
+    "editPlato": "Edit Dish",
+    "fillExample": "📝 Fill Example",
     "noPlatos": "No dishes in this restaurant",
     "addPlatosToOperate": "Add dishes to start operating",
     "plato": "Dish",
